added nes css and press+start font

--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
-hello
-world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="./node_modules/nes.css/css/nes.min.css" rel="stylesheet" >
+    <title>Ajmal esa</title>
+</head>
+<body>
+    <div class="nes-container with-title">
+        <span class="title">Introduction</div>
+    </div>
+</body>
+</html>
