--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link href="./node_modules/nes.css/css/nes.min.css" rel="stylesheet" >
+    <link href="css/custom.css" rel="stylesheet">
     <title>Ajmal esa</title>
 </head>
+
 <body>
-    <div class="nes-container with-title">
-        <span class="title">Introduction</div>
+
+    <div class="content">
+        
     </div>
+
+    <footer class="text-box">
+        <div class="nes-container is-rounded is-dark with-title">
+            <span class="title">Introduction</span>
+            <p>Welcome to my profile. My name is Ajmal. People call me AJ.</p>
+        </div>
+    </footer>
+
 </body>
+
 </html>
