--- a/index.html
+++ b/index.html
@@ -5,23 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <link href="./node_modules/nes.css/css/nes.min.css" rel="stylesheet" >
+    <link href="./node_modules/nes.css/css/nes.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <link href="css/custom.css" rel="stylesheet">
     <title>Ajmal esa</title>
 </head>
 
 <body>
-
-    <div class="content">
+    
+    <div class="display-content">
         
     </div>
 
     <footer class="text-box">
         <div class="nes-container is-rounded is-dark with-title">
             <span class="title">Introduction</span>
-            <p>Welcome to my profile. My name is Ajmal. People call me AJ.</p>
+            <span id="dialog"></span>
         </div>
     </footer>
+
+    <script src="js/typer.js" type="module"></script>
 
 </body>
 
