Add avatar and center main content

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 
 <body>
     
-    <div class="display-content">
+    <div id="display-content">
+
+        <img id="avatar" src="img/avatar.png">
         
     </div>
 
-    <footer class="text-box">
+    <footer id="text-box">
         <div class="nes-container is-rounded is-dark with-title">
             <span class="title">Introduction</span>
             <span id="dialog"></span>
