--- a/index.html
+++ b/index.html
@@ -8,14 +8,64 @@
     <link href="./node_modules/nes.css/css/nes.min.css" rel="stylesheet">
     <script src="js/typed.js"></script>
     <link href="css/custom.css" rel="stylesheet">
+    <link href="css/snackbar.css" rel="stylesheet">
+    <script src="js/snackbar.js"></script>
     <title>Ajmal esa</title>
 </head>
 
-<body>
+
+<body onload="myFunction()">
+    <!-- The actual snackbar -->
+    <div id="snackbar">ESC to enable mouse</div>
+
+    <div id="menu" style="display:none">
+        <div class="options">  
+            <span class="menu-label">TEXT SPEED:</span>
+            <span class="selections">
+                <label>
+                    <input type="radio" class="nes-radio is-dark" name="text-speed" value="80" onchange="handleClick(this)" autofocus checked />
+                    <span>SLOW</span>
+                </label>
+                <label>
+                    <input type="radio" class="nes-radio is-dark" name="text-speed" value="50" onchange="handleClick(this)" />
+                    <span>MEDIUM</span>
+                </label>
+                <label>
+                    <input type="radio" class="nes-radio is-dark" name="text-speed" value="20" onchange="handleClick(this)" />
+                    <span>FAST</span>
+                </label>
+            </span>
+        </div>
+
+        <div class="options">
+            <span class="menu-label">TEXT COLOR:</span>
+            <span class="selections">
+                <label>
+                    <input type="radio" class="nes-radio" name="color" value="80" onchange="handleClick(this)" />
+                    <span class="nes-text is-error">RED</span>
+                </label>
+                <label>
+                    <input type="radio" class="nes-radio" name="color" value="50" onchange="handleClick(this)" />
+                    <span class="nes-text is-success">GREEN</span>
+                </label>
+                <label>
+                    <input type="radio" class="nes-radio" name="color" value="20" onchange="handleClick(this)" checked/>
+                    <span class="nes-text is-primary">BLUE</span>
+                </label>
+            </span>
+        </div>
+
+        <div class="options save-and-exit">
+            <button class="nes-btn is-primary">SAVE AND EXIT</button>
+        </div>
+
+    </div>
     
     <div id="display-content">
+        <img id="avatar" src="img/avatar.png"> 
+    </div>
 
-        <img id="avatar" src="img/avatar.png">
+    <div id="desktop-hint">
         
     </div>
 
@@ -26,7 +76,8 @@
         </div>
     </footer>
 
-    <script src="js/typer.js" type="module"></script>
+    <script src="js/typer.js"></script>
+    <script src="js/controls.js"></script>
 
 </body>
 
