--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <!-- /Name display on the left -->
         
             <!-- /Navigation Menu For Screens With A Width Larger Than 960px -->
-            <div class="uk-visible@m ">
+            <div class="uk-navbar-right uk-visible@m uk-margin-large-right">
                 <ul class="uk-navbar-nav">
                     <li class="uk-active"><a href="#">Projects</a></li>
                     <li class=""><a href="#">About</a></li>
@@ -61,7 +61,7 @@
             <div class="uk-grid-small uk-grid-divider uk-child-width-auto" uk-grid>
                 <div>
                     <ul class="uk-subnav uk-subnav-pill" uk-margin>
-                        <li class="uk-active" uk-filter-control><a href="#">All</a></li>
+                        <li class="uk-active uk-text-bold" uk-filter-control><a href="#">All</a></li>
                     </ul>
                 </div>
                 <div>
@@ -80,19 +80,36 @@
         
             <ul class="js-filter uk-child-width-1-2 uk-child-width-1-3@m uk-text-center" uk-grid="masonry: true">
                 <li project-type="personal" primary-language="JavaScript">
-                    <div class="uk-card uk-card-default uk-card-body">
-                        <canvas width="600" height="600"></canvas>
-                        <div class="uk-position-center">Item</div>
+                    <div class="uk-card uk-card-default uk-card-body uk-card-hover">
+                        <div class="uk-card-media-top">
+                            <div uk-lightbox>
+                                <div>
+                                    <a class="uk-button uk-button-default" href="https://i.imgur.com/soUoMaW.png">
+                                        <img src="https://i.imgur.com/soUoMaW.png" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="uk-card-header">
+                            <h3 class="uk-card-title">Clicker Game - Web Version</h3>
+                        </div>
+                        <div class="uk-card-body">
+                            <p>Completely responsive clicker game</p>
+                        </div>
+                        <div class="uk-card-footer">
+                            <a href="https://ajmalesa.github.io/Clicker-Website/" class="uk-button uk-button-text" target="_blank">Demo</a> |
+                            <a href="https://github.com/ajmalesa/Clicker-Website" class="uk-button uk-button-text" target="_blank">Code</a> 
+                        </div>
                     </div>
                 </li>
                 <li project-type="personal" primary-language="PHP">
-                    <div class="uk-card uk-card-default uk-card-body">
+                    <div class="uk-card uk-card-secondary uk-card-body uk-card-hover">
                         <canvas width="600" height="600"></canvas>
                         <div class="uk-position-center">Item</div>
                     </div>
                 </li>
                 <li project-type="personal" primary-language="JavaScript">
-                    <div class="uk-card uk-card-default uk-card-body">
+                    <div class="uk-card uk-card-secondary uk-card-body uk-card-hover">
                         <canvas width="600" height="600"></canvas>
                         <div class="uk-position-center">Item</div>
                     </div>
