Added one more project and removed border from project cards

--- a/index.html
+++ b/index.html
@@ -79,8 +79,35 @@
             <!-- /Filter selection -->
         
             <!-- Masonry grid of all projects -->
-            <ul class="js-filter uk-child-width-1-2 uk-child-width-1-3@m uk-text-center" uk-grid="masonry: true">
+            <ul class="js-filter uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-3@m uk-child-width-1-4@l uk-text-center" uk-grid="masonry: true">
+                <!-- Individual projects -->
                 <li project-type="personal" primary-language="JavaScript">
+                    <div class="uk-card uk-card-default uk-card-body uk-card-hover">
+                        <div class="uk-card-media-top">
+                            <div uk-lightbox>
+                                <div>
+                                    <a class="uk-button uk-button-default" href="https://i.imgur.com/fCK9G1E.png">
+                                        <img src="https://i.imgur.com/fCK9G1E.png" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="uk-card-header">
+                            <h3 class="uk-card-title">Clicker Game For Web</h3>
+                        </div>
+                        <div class="uk-card-body">
+                            <p>Responsive clicker game</p>
+                        </div>
+                        <div class="uk-card-footer">
+                            <a href="https://ajmalesa.github.io/Clicker-Website/" class="uk-button uk-button-text" target="_blank">Demo</a> |
+                            <a href="https://github.com/ajmalesa/Clicker-Website" class="uk-button uk-button-text" target="_blank">Code</a> 
+                        </div>
+                    </div>
+                </li>
+                <!-- /Individual projects -->
+
+                <!-- Individual projects -->
+                <li project-type="personal" primary-language="Java">
                     <div class="uk-card uk-card-default uk-card-body uk-card-hover">
                         <div class="uk-card-media-top">
                             <div uk-lightbox>
@@ -92,10 +119,10 @@
                             </div>
                         </div>
                         <div class="uk-card-header">
-                            <h3 class="uk-card-title">Clicker Game - Web Version</h3>
+                            <h3 class="uk-card-title">Clicker Game For Android</h3>
                         </div>
                         <div class="uk-card-body">
-                            <p>Completely responsive clicker game</p>
+                            <p>Clicker game made for Android and with more features than the web version</p>
                         </div>
                         <div class="uk-card-footer">
                             <a href="https://ajmalesa.github.io/Clicker-Website/" class="uk-button uk-button-text" target="_blank">Demo</a> |
@@ -103,13 +130,15 @@
                         </div>
                     </div>
                 </li>
+                <!-- /Individual projects -->
+                
                 <li project-type="personal" primary-language="PHP">
                     <div class="uk-card uk-card-secondary uk-card-body uk-card-hover">
                         <canvas width="600" height="600"></canvas>
                         <div class="uk-position-center">Item</div>
                     </div>
                 </li>
-                <li project-type="personal" primary-language="JavaScript">
+                <li project-type="personal" primary-language="JavaScript"> 
                     <div class="uk-card uk-card-secondary uk-card-body uk-card-hover">
                         <canvas width="600" height="600"></canvas>
                         <div class="uk-position-center">Item</div>
