--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <!-- /Filter and sort selection -->
         
             <!-- Masonry grid of all projects -->
-            <ul class="js-filter uk-child-width-1-2 uk-child-width-1-3@m uk-child-width-1-1@s uk-text-center" uk-grid="masonry: true">
+            <ul class="js-filter uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-3@m uk-child-width-1-4@l uk-text-center" uk-grid="masonry: true">
                 <!-- Individual projects -->
                 <li project-type="personal" primary-language="JavaScript" data-name="Clicker Web Game">
                     <div class="uk-card uk-card-default uk-card-body uk-card-hover">
