--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
                                 <li uk-filter-control="filter: [primary-language='Java']; group: primary-language"><a href="#">Java</a></li>
                             </ul>
                         </div>
+                        <div>
+                            <ul class="uk-subnav uk-subnav-pill" uk-margin>
+                                <li uk-filter-control="filter: [platform='mobile']; group: platform"><a href="#">Mobile</a></li>
+                                <li uk-filter-control="filter: [platform='desktop']; group: platform"><a href="#">Desktop</a></li>
+                            </ul>
+                        </div>
                     </div>
         
                 </div>
@@ -88,53 +94,47 @@
             <!-- Masonry grid of all projects -->
             <ul class="js-filter uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-3@m uk-child-width-1-4@l uk-text-center" uk-grid="masonry: true">
                 <!-- Individual projects -->
-                <li project-type="personal" primary-language="JavaScript" data-name="Clicker Web Game">
-                    <div class="uk-card uk-card-default uk-card-body uk-card-hover">
-                        <div class="uk-card-media-top">
-                            <div uk-lightbox>
+                <li project-type="personal" primary-language="JavaScript" platform="desktop" data-name="Clicker Web Game">
+                    <div class="uk-text-center">
+                        <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
+                            <img src="img/clicker-website.png" alt="">
+                            <div class="uk-transition-fade uk-position-cover uk-overlay uk-overlay-primary uk-flex uk-flex-center uk-flex-middl">
                                 <div>
-                                    <a class="uk-button uk-button-default" href="img/clicker-website.png">
-                                        <img src="img/clicker-website.png" alt="Clicker website screenshot">
-                                    </a>
+                                    <div class="uk-card">
+                                        <div class="uk-card-header">
+                                            <h4 class=>Clicker Website</h4>
+                                        </div>
+                                        <div class="uk-card-footer">
+                                            <a href="https://ajmalesa.github.io/Clicker-Website/" class="uk-button uk-button-text" target="_blank">DEMO</a> |
+                                            <a href="https://github.com/ajmalesa/Clicker-Website" class="uk-button uk-button-text" target="_blank">CODE</a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="uk-card-header">
-                            <h3 class="uk-card-title">Clicker Web Game</h3>
-                        </div>
-                        <div class="uk-card-body">
-                            <p>Responsive clicker game.</p>
-                        </div>
-                        <div class="uk-card-footer">
-                            <a href="https://ajmalesa.github.io/Clicker-Website/" class="uk-button uk-button-text" target="_blank">Demo</a> |
-                            <a href="https://github.com/ajmalesa/Clicker-Website" class="uk-button uk-button-text" target="_blank">Code</a> 
-                        </div>
+                        </div>                 
                     </div>
                 </li>
                 <!-- /Individual projects -->
                 <!-- Individual projects -->
-                <li project-type="personal" primary-language="Java" data-name="Clicker Android Game">
-                    <div class="uk-card uk-card-default uk-card-body uk-card-hover">
-                        <div class="uk-card-media-top">
-                            <div uk-lightbox>
+                <li project-type="personal" primary-language="Java" platform="mobile" data-name="Clicker Android Game">
+                    <div class="uk-text-center">
+                        <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
+                            <img src="img/clicker-app.png" alt="">
+                            <div class="uk-transition-fade uk-position-cover uk-overlay uk-overlay-primary uk-flex uk-flex-center uk-flex-middl">
                                 <div>
-                                    <a class="uk-button uk-button-default" href="img/clicker-app.png">
-                                        <img src="img/clicker-app.png" alt="Clicker app screenshot">
-                                    </a>
+                                    <div class="uk-card">
+                                        <div class="uk-card-header">
+                                            <h4>Clicker App</h4>
+                                        </div>
+                                        <div class="uk-card-footer">
+                                            <a href="https://github.com/ajmalesa/Clicker-Android-App/releases/tag/V1.1.0" class="uk-button uk-button-text" target="_blank">APK</a> |
+                                            <a href="https://github.com/ajmalesa/Clicker-Android-App" class="uk-button uk-button-text" target="_blank">CODE</a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="uk-card-header">
-                            <h3 class="uk-card-title">Clicker Android Game</h3>
-                        </div>
-                        <div class="uk-card-body">
-                            <p>Clicker game ported and improved.</p>
-                        </div>
-                        <div class="uk-card-footer">
-                            <a href="https://ajmalesa.github.io/Clicker-Website/" class="uk-button uk-button-text" target="_blank">Demo</a> |
-                            <a href="https://github.com/ajmalesa/Clicker-Website" class="uk-button uk-button-text" target="_blank">Code</a> 
-                        </div>
-                    </div>
+                        </div>        
+                    </div>                
                 </li>
                 <!-- /Individual projects -->
             </ul>
