--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-    <nav class="uk-background-secondary uk-light uk-navbar ">
+    <nav class="uk-background-secondary uk-light uk-navbar" uk-scrollspy="cls: uk-animation-slide-top; repeat: true">
         <!-- Name display on the left -->
         <div class="uk-navbar-left uk-margin-large-left">
             <a href="" class="uk-navbar-item uk-logo uk-margin-small-right">Ajmal Esa</a>
@@ -50,11 +50,11 @@
         <!-- /Mobile Navigation Menu On The Right -->
     </nav>
 
-    <div class="uk-margin-large-left uk-margin-large-right uk-margin-large-top">
+    <div class="uk-margin-large-left uk-margin-large-right uk-margin-large-top" >
         <div uk-filter="target: .js-filter">
 
             <!-- Filter and sort selection -->
-            <div class="uk-grid-small uk-flex-middle" uk-grid>
+            <div class="uk-grid-small uk-flex-middle" uk-grid uk-scrollspy="cls: uk-animation-slide-left; repeat: true">
                 <div class="uk-width-expand">
         
                     <div class="uk-grid-small uk-grid-divider uk-child-width-auto" uk-grid>
@@ -73,6 +73,7 @@
                             <ul class="uk-subnav uk-subnav-pill" uk-margin>
                                 <li uk-filter-control="filter: [primary-language='JavaScript']; group: primary-language"><a href="#">JavaScript</a></li>
                                 <li uk-filter-control="filter: [primary-language='Java']; group: primary-language"><a href="#">Java</a></li>
+                                <li uk-filter-control="filter: [primary-language='PHP']; group: primary-language"><a href="#">PHP</a></li>
                             </ul>
                         </div>
                         <div>
@@ -92,7 +93,7 @@
             <!-- /Filter and sort selection -->
         
             <!-- Masonry grid of all projects -->
-            <ul class="js-filter uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-3@m uk-child-width-1-4@l uk-text-center" uk-grid="masonry: true">
+            <ul class="js-filter uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-3@m uk-child-width-1-4@l uk-text-center" uk-grid="masonry: true" uk-scrollspy="cls: uk-animation-slide-right; repeat: true">
                 <!-- Individual project -->
                 <li project-type="personal" primary-language="JavaScript" platform="desktop" data-name="Clicker Web Game">
                     <div class="uk-text-center">
@@ -136,6 +137,29 @@
                         </div>        
                     </div>                
                 </li>
+                <!-- /Individual project -->
+                <!-- Individual project -->
+                <li project-type="personal" primary-language="PHP" platform="desktop" data-name="Tracker">
+                    <div class="uk-text-center">
+                        <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
+                            <img src="img/tracker-website.png" alt="Screenshot of tracker program">
+                            <div class="uk-transition-fade uk-position-cover uk-overlay uk-overlay-primary uk-flex uk-flex-center uk-flex-middle">
+                                <div>
+                                    <div class="uk-card">
+                                        <div class="uk-card-header">
+                                            <h4 class="uk-card-title">Tracker</h4>
+                                        </div>
+                                        <div class="uk-card-footer">
+                                            <a href="https://bugcatcher.000webhostapp.com/" class="uk-button uk-button-text project-links" target="_blank">DEMO</a> |
+                                            <a href="https://github.com/ajmalesa/Tracker" class="uk-button uk-button-text project-links" target="_blank">CODE</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>        
+                    </div>                
+                </li>
+                <!-- /Individual project -->
             </ul>
             <!-- /Masonry grid of all projects -->
         </div>
