--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 </head>
 <body>
 
-    <nav class="uk-background-secondary uk-light uk-navbar" uk-scrollspy="cls: uk-animation-slide-top; repeat: true">
+    <nav class="uk-background-secondary uk-light uk-navbar" uk-sticky="animation: uk-animation-slide-top">
         <!-- Name display on the left -->
-        <div class="uk-navbar-left uk-margin-large-left">
+        <div class="uk-navbar-left uk-margin-large-left" uk-scrollspy="cls: uk-animation-slide-top; repeat: true">
             <a href="" class="uk-navbar-item uk-logo uk-margin-small-right">Ajmal Esa</a>
         </div>
         <!-- /Name display on the left -->
     
         <!-- /Navigation Menu For Screens With A Width Larger Than 960px -->
-        <div class="uk-navbar-right uk-visible@m uk-margin-large-right">
+        <div class="uk-navbar-right uk-visible@m uk-margin-large-right" uk-scrollspy="cls: uk-animation-slide-top; repeat: true">
             <ul class="uk-navbar-nav">
                 <li class="uk-active"><a href="/">Projects</a></li>
                 <!-- <li class=""><a href="#">About</a></li> -->
@@ -35,7 +35,7 @@
 
         <!-- Mobile Navigation Menu On The Right -->
         <div class="uk-hidden@m uk-navbar-right uk-margin-large-right">
-            <a class="uk-navbar-toggle" uk-toggle="target: #offcanvas-nav-primary" uk-navbar-toggle-icon href="#"></a>
+            <a class="uk-navbar-toggle" uk-toggle="target: #offcanvas-nav-primary" uk-navbar-toggle-icon href="#" uk-scrollspy="cls: uk-animation-slide-top; repeat: true"></a>
         </div>
 
         <div class="uk-hidden@m" id="offcanvas-nav-primary" uk-offcanvas="flip: true; overlay: true">
@@ -60,26 +60,26 @@
                     <div class="uk-grid-small uk-grid-divider uk-child-width-auto" uk-grid>
                         <div>
                             <ul class="uk-subnav uk-subnav-pill" uk-margin>
-                                <li class="uk-active" uk-filter-control><a href="#">All</a></li>
+                                <li class="uk-active" uk-filter-control><a href="#" class="uk-text-emphasis">All</a></li>
                             </ul>
                         </div>
                         <div>
                             <ul class="uk-subnav uk-subnav-pill" uk-margin>
-                                <li uk-filter-control="filter: [project-type='work']; group: project-type"><a href="#">Work</a></li>
-                                <li uk-filter-control="filter: [project-type='personal']; group: project-type"><a href="#">Personal</a></li>
+                                <li uk-filter-control="filter: [project-type='work']; group: project-type"><a href="#" class="uk-text-emphasis">Work</a></li>
+                                <li uk-filter-control="filter: [project-type='personal']; group: project-type"><a href="#" class="uk-text-emphasis">Personal</a></li>
                             </ul>
                         </div>
                         <div>
                             <ul class="uk-subnav uk-subnav-pill" uk-margin>
-                                <li uk-filter-control="filter: [primary-language='JavaScript']; group: primary-language"><a href="#">JavaScript</a></li>
-                                <li uk-filter-control="filter: [primary-language='Java']; group: primary-language"><a href="#">Java</a></li>
-                                <li uk-filter-control="filter: [primary-language='PHP']; group: primary-language"><a href="#">PHP</a></li>
+                                <li uk-filter-control="filter: [primary-language='JavaScript']; group: primary-language"><a href="#" class="uk-text-emphasis">JavaScript</a></li>
+                                <li uk-filter-control="filter: [primary-language='Java']; group: primary-language"><a href="#" class="uk-text-emphasis">Java</a></li>
+                                <li uk-filter-control="filter: [primary-language='PHP']; group: primary-language"><a href="#" class="uk-text-emphasis">PHP</a></li>
                             </ul>
                         </div>
                         <div>
                             <ul class="uk-subnav uk-subnav-pill" uk-margin>
-                                <li uk-filter-control="filter: [platform='mobile']; group: platform"><a href="#">Mobile</a></li>
-                                <li uk-filter-control="filter: [platform='desktop']; group: platform"><a href="#">Desktop</a></li>
+                                <li uk-filter-control="filter: [platform='mobile']; group: platform"><a href="#" class="uk-text-emphasis">Mobile</a></li>
+                                <li uk-filter-control="filter: [platform='desktop']; group: platform"><a href="#" class="uk-text-emphasis">Desktop</a></li>
                             </ul>
                         </div>
                     </div>
@@ -95,18 +95,18 @@
             <!-- Masonry grid of all projects -->
             <ul class="js-filter uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-3@m uk-child-width-1-4@l uk-text-center" uk-grid="masonry: true" uk-scrollspy="cls: uk-animation-slide-right; repeat: true">
                 <!-- Individual project -->
-                <li project-type="personal" primary-language="JavaScript" platform="desktop" data-name="Clicker Web Game">
+                <li project-type="personal" primary-language="JavaScript" platform="desktop" data-name="Clicker Web Game" >
                     <div class="uk-text-center">
                         <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
-                            <img src="img/clicker-website.png" alt="">
-                            <div class="uk-transition-fade uk-position-cover uk-overlay uk-overlay-primary uk-flex uk-flex-center uk-flex-middle">
+                            <img src="img/clicker-website.png" uk-blend-hue alt="">
+                            <div class="uk-transition-fade uk-position-cover uk-overlay uk-overlay-primary uk-flex uk-flex-center uk-flex-middle" >
                                 <div>
                                     <div class="uk-card">
                                         <div class="uk-card-header">
-                                            <h4 class="uk-card-title">Clicker Website</h4>
+                                            <h4 class="uk-card-title" >Clicker Website</h4>
                                         </div>
                                         <div class="uk-card-footer">
-                                            <a href="https://ajmalesa.github.io/Clicker-Website/" class="uk-button uk-button-text project-links" target="_blank">DEMO</a> |
+                                            <a href="https://ajmalesa.github.io/Clicker-Website/" class="uk-button uk-button-text project-links" target="_blank" >DEMO</a> |
                                             <a href="https://github.com/ajmalesa/Clicker-Website" class="uk-button uk-button-text project-links" target="_blank">CODE</a>
                                         </div>
                                     </div>
