Added details modal for each project for a little  more info on each project

--- a/index.html
+++ b/index.html
@@ -107,13 +107,23 @@
                                         </div>
                                         <div class="uk-card-footer">
                                             <a href="https://ajmalesa.github.io/Clicker-Website/" class="uk-button uk-button-text project-links" target="_blank" >DEMO</a> |
-                                            <a href="https://github.com/ajmalesa/Clicker-Website" class="uk-button uk-button-text project-links" target="_blank">CODE</a>
+                                            <a href="https://github.com/ajmalesa/Clicker-Website" class="uk-button uk-button-text project-links" target="_blank" >CODE</a> |
+                                            <a href="#" class="uk-button uk-button-text project-links" uk-toggle="target: #clicker-website-details" >DETAILS</a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>                 
                     </div>
+                    <!-- Details modal -->
+                    <div id="clicker-website-details" uk-modal>
+                        <div class="uk-modal-dialog uk-modal-body">
+                            <button class="uk-clicker-website-details" type="button" uk-close></button>
+                            <h2 class="uk-modal-title">Clicker Website</h2>
+                            <p>Clicker game written in JavaScript. </p>
+                        </div>
+                    </div>
+                    <!-- /Details modal -->
                 </li>
                 <!-- /Individual project -->
                 <!-- Individual project -->
@@ -129,13 +139,23 @@
                                         </div>
                                         <div class="uk-card-footer">
                                             <a href="https://github.com/ajmalesa/Clicker-Android-App/releases/tag/V1.1.0" class="uk-button uk-button-text project-links" target="_blank">APK</a> |
-                                            <a href="https://github.com/ajmalesa/Clicker-Android-App" class="uk-button uk-button-text project-links" target="_blank">CODE</a>
+                                            <a href="https://github.com/ajmalesa/Clicker-Android-App" class="uk-button uk-button-text project-links" target="_blank">CODE</a> | 
+                                            <a href="#" class="uk-button uk-button-text project-links" uk-toggle="target: #clicker-app-details" >DETAILS</a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>        
-                    </div>                
+                    </div>  
+                    <!-- Details modal -->
+                    <div id="clicker-app-details" uk-modal>
+                        <div class="uk-modal-dialog uk-modal-body">
+                            <button class="uk-clicker-app-details" type="button" uk-close></button>
+                            <h2 class="uk-modal-title">Clicker App</h2>
+                            <p>Clicker game written in Java and XML using Android Studio. More advanced version of web clicker game. Includes graphics, animations and sound effects.</p>
+                        </div>
+                    </div>
+                    <!-- /Details modal -->              
                 </li>
                 <!-- /Individual project -->
                 <!-- Individual project -->
@@ -151,13 +171,23 @@
                                         </div>
                                         <div class="uk-card-footer">
                                             <a href="https://bugcatcher.000webhostapp.com/" class="uk-button uk-button-text project-links" target="_blank">DEMO</a> |
-                                            <a href="https://github.com/ajmalesa/Tracker" class="uk-button uk-button-text project-links" target="_blank">CODE</a>
+                                            <a href="https://github.com/ajmalesa/Tracker" class="uk-button uk-button-text project-links" target="_blank">CODE</a> |
+                                            <a href="#" class="uk-button uk-button-text project-links" uk-toggle="target: #tracker-details" >DETAILS</a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>        
-                    </div>                
+                    </div>  
+                    <!-- Details modal -->
+                    <div id="tracker-details" uk-modal>
+                        <div class="uk-modal-dialog uk-modal-body">
+                            <button class="uk-tracker-details" type="button" uk-close></button>
+                            <h2 class="uk-modal-title">Tracker</h2>
+                            <p>Tracker program written in PHP. Full CRUD functionality.</p>
+                        </div>
+                    </div>
+                    <!-- /Details modal -->               
                 </li>
                 <!-- /Individual project -->
             </ul>
