--- a/index.html
+++ b/index.html
@@ -117,10 +117,19 @@
                     </div>
                     <!-- Details modal -->
                     <div id="clicker-website-details" uk-modal>
-                        <div class="uk-modal-dialog uk-modal-body">
-                            <button class="uk-clicker-website-details" type="button" uk-close></button>
-                            <h2 class="uk-modal-title">Clicker Website</h2>
-                            <p>Clicker game written in JavaScript. </p>
+                        <div class="uk-modal-dialog">
+                            <button class="uk-modal-close-default" type="button" uk-close></button>
+                            <div class="uk-modal-header">
+                                <h2 class="uk-modal-title">Clicker Website</h2>    
+                            </div>
+                            <div class="uk-modal-body">
+                                <p>Casual clicker game made for the web.</p>
+                            </div>
+                            <div class="uk-modal-footer">
+                                <span class="uk-badge">JavaScript</span>
+                                <span class="uk-badge">HTML</span>
+                                <span class="uk-badge">CSS</span>
+                            </div>
                         </div>
                     </div>
                     <!-- /Details modal -->
@@ -149,10 +158,19 @@
                     </div>  
                     <!-- Details modal -->
                     <div id="clicker-app-details" uk-modal>
-                        <div class="uk-modal-dialog uk-modal-body">
-                            <button class="uk-clicker-app-details" type="button" uk-close></button>
-                            <h2 class="uk-modal-title">Clicker App</h2>
-                            <p>Clicker game written in Java and XML using Android Studio. More advanced version of web clicker game. Includes graphics, animations and sound effects.</p>
+                        <div class="uk-modal-dialog">
+                            <button class="uk-modal-close-default" type="button" uk-close></button>
+                            <div class="uk-modal-header">
+                                <h2 class="uk-modal-title">Clicker App</h2>    
+                            </div>
+                            <div class="uk-modal-body">
+                                <p>More advanced version of web clicker game. Includes graphics, animations and sound effects.</p>
+                            </div>
+                            <div class="uk-modal-footer">
+                                <span class="uk-badge">Java</span>
+                                <span class="uk-badge">XML</span>
+                                <span class="uk-badge">Android Studio</span>
+                            </div>
                         </div>
                     </div>
                     <!-- /Details modal -->              
@@ -181,10 +199,20 @@
                     </div>  
                     <!-- Details modal -->
                     <div id="tracker-details" uk-modal>
-                        <div class="uk-modal-dialog uk-modal-body">
-                            <button class="uk-tracker-details" type="button" uk-close></button>
-                            <h2 class="uk-modal-title">Tracker</h2>
-                            <p>Tracker program written in PHP. Full CRUD functionality.</p>
+                        <div class="uk-modal-dialog">
+                            <button class="uk-modal-close-default" type="button" uk-close></button>
+                            <div class="uk-modal-header">
+                                <h2 class="uk-modal-title">Tracker</h2>    
+                            </div>
+                            <div class="uk-modal-body">
+                                <p>Tracker program with full CRUD functionality.</p>
+                            </div>
+                            <div class="uk-modal-footer">
+                                <span class="uk-badge">PHP</span>
+                                <span class="uk-badge">JavaScript</span>
+                                <span class="uk-badge">CSS</span>
+                                <span class="uk-badge">HTML</span>
+                            </div>
                         </div>
                     </div>
                     <!-- /Details modal -->               
